fix: update mobile navigation button text and visibility for better UX

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -102,11 +102,9 @@
   &.visible {
     transform: translateX(120px);
   }
-}
 
-@media screen and (max-width: 576px) {
-  .mobile-nav-btn {
-    display: block; /* Visible uniquement sur les petits écrans */
+  @media screen and (min-width: $medium) {
+    display: none;
   }
 }
 
